--- a/index.html
+++ b/index.html
@@ -14,8 +14,39 @@
     />
   </head>
   <body>
-
-    
+    <header>
+      <nav>
+        <ul class="nav justify-content-center d-none d-lg-flex">
+          <li class="nav-item">
+            <a class="nav-link active text-dark" aria-current="page" href="#">
+              Portfolio
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active text-dark" aria-current="page" href="#">
+              About
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active text-dark" aria-current="page" href="#">
+              Contact
+            </a>
+          </li>
+        </ul>
+        <ul class="nav justify-content-between d-flex d-lg-none">
+          <li class="nav-item">
+            <a class="nav-link active text-dark" aria-current="page" href="#">
+              Welcome
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active text-dark" aria-current="page" href="#">
+              <img src="images/toggle.png" alt="toggle menu icon" />
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
       integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
