--- a/index.html
+++ b/index.html
@@ -46,6 +46,19 @@
           </li>
         </ul>
       </nav>
+      <div class="container-fluid  align-items-center text-center mt-4 p-4">
+          <h1>Hello My Name is Jhon</h1>
+          <h2 class="text-success">I’m a software developer</h2>
+          <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+        <ul class="nav justify-content-center">
+            <li class="nav-item"><a href="#" class="nav-link"><img src="images/cat.png" alt=""></a> </li>
+            <li class="nav-item"><a href="#" class="nav-link"><img src="images/twitter.png" alt=""></a> </li>
+            <li class="nav-item"><a href="#" class="nav-link"><img src="images/in.png" alt=""> </a></li>
+            <li class="nav-item"><a href="#" class="nav-link"><img src="images/v.png" alt=""> </a></li>
+            <li class="nav-item"><a href="#" class="nav-link"><img src="images/m.png" alt=""> </a></li>
+        </ul>
+        <img class="mt-4" src="images/arrow.png" alt="arrow button">
+        </div>
     </header>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
