--- a/index.html
+++ b/index.html
@@ -46,20 +46,151 @@
           </li>
         </ul>
       </nav>
-      <div class="container-fluid  align-items-center text-center mt-4 p-4">
-          <h1>Hello My Name is Jhon</h1>
-          <h2 class="text-success">I’m a software developer</h2>
-          <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+      <div class="container-fluid align-items-center text-center mt-4 p-4">
+        <h1>Hello My Name is Jhon</h1>
+        <h2 class="text-success">I’m a software developer</h2>
+        <p>
+          I can help you build a product , feature or website Look through some
+          of my work and experience! If you like what you see and have a project
+          you need coded, don’t hestiate to contact me.
+        </p>
         <ul class="nav justify-content-center">
-            <li class="nav-item"><a href="#" class="nav-link"><img src="images/cat.png" alt=""></a> </li>
-            <li class="nav-item"><a href="#" class="nav-link"><img src="images/twitter.png" alt=""></a> </li>
-            <li class="nav-item"><a href="#" class="nav-link"><img src="images/in.png" alt=""> </a></li>
-            <li class="nav-item"><a href="#" class="nav-link"><img src="images/v.png" alt=""> </a></li>
-            <li class="nav-item"><a href="#" class="nav-link"><img src="images/m.png" alt=""> </a></li>
+          <li class="nav-item">
+            <a href="#" class="nav-link"><img src="images/cat.png" alt="" /></a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link"
+              ><img src="images/twitter.png" alt=""
+            /></a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link"><img src="images/in.png" alt="" /> </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link"><img src="images/v.png" alt="" /> </a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link"><img src="images/m.png" alt="" /> </a>
+          </li>
         </ul>
-        <img class="mt-4" src="images/arrow.png" alt="arrow button">
-        </div>
+        <img class="mt-4" src="images/arrow.png" alt="arrow button" />
+      </div>
     </header>
+    <section class="container-fluid text-center">
+      <h2>My Recent Works</h2>
+      <div class="row p-5 m-5">
+        <div class="col p-5">
+          <div class="card">
+            <div class="placeholder bg-dark"></div>
+
+            <div class="card-body">
+              <h3 class="card-title">Multi-Post Stories Gain+Glory</h3>
+              <ul class="d-flex justify-content-center">
+                <li>
+                  <span class="badge bg-dark m-1 p-2">Ruby on rails</span>
+                </li>
+                <li><span class="badge bg-dark m-1 p-2">css</span></li>
+                <li><span class="badge bg-dark m-1 p-2">JavScript</span></li>
+                <li><span class="badge bg-dark m-1 p-2">html</span></li>
+              </ul>
+              <a href="#" class="btn btn-success">See Project</a>
+            </div>
+          </div>
+        </div>
+        <div class="col p-5">
+          <div class="card">
+            <div class="placeholder bg-dark"></div>
+
+            <div class="card-body">
+              <h3 class="card-title">Multi-Post Stories Gain+Glory</h3>
+              <ul class="d-flex justify-content-center">
+                <li>
+                  <span class="badge bg-dark m-1 p-2">Ruby on rails</span>
+                </li>
+                <li><span class="badge bg-dark m-1 p-2">css</span></li>
+                <li><span class="badge bg-dark m-1 p-2">JavScript</span></li>
+                <li><span class="badge bg-dark m-1 p-2">html</span></li>
+              </ul>
+              <a href="#" class="btn btn-success">See Project</a>
+            </div>
+          </div>
+        </div>
+        <div class="col p-5">
+          <div class="card">
+            <div class="placeholder bg-dark"></div>
+
+            <div class="card-body">
+              <h3 class="card-title">Multi-Post Stories Gain+Glory</h3>
+              <ul class="d-flex justify-content-center">
+                <li>
+                  <span class="badge bg-dark m-1 p-2">Ruby on rails</span>
+                </li>
+                <li><span class="badge bg-dark m-1 p-2">css</span></li>
+                <li><span class="badge bg-dark m-1 p-2">JavScript</span></li>
+                <li><span class="badge bg-dark m-1 p-2">html</span></li>
+              </ul>
+              <a href="#" class="btn btn-success">See Project</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row p-5 m-5">
+        <div class="col p-5">
+          <div class="card">
+            <div class="placeholder bg-dark"></div>
+
+            <div class="card-body">
+              <h3 class="card-title">Multi-Post Stories Gain+Glory</h3>
+              <ul class="d-flex justify-content-center">
+                <li>
+                  <span class="badge bg-dark m-1 p-2">Ruby on rails</span>
+                </li>
+                <li><span class="badge bg-dark m-1 p-2">css</span></li>
+                <li><span class="badge bg-dark m-1 p-2">JavScript</span></li>
+                <li><span class="badge bg-dark m-1 p-2">html</span></li>
+              </ul>
+              <a href="#" class="btn btn-success">See Project</a>
+            </div>
+          </div>
+        </div>
+        <div class="col p-5">
+          <div class="card">
+            <div class="placeholder bg-dark"></div>
+
+            <div class="card-body">
+              <h3 class="card-title">Multi-Post Stories Gain+Glory</h3>
+              <ul class="d-flex justify-content-center">
+                <li>
+                  <span class="badge bg-dark m-1 p-2">Ruby on rails</span>
+                </li>
+                <li><span class="badge bg-dark m-1 p-2">css</span></li>
+                <li><span class="badge bg-dark m-1 p-2">JavScript</span></li>
+                <li><span class="badge bg-dark m-1 p-2">html</span></li>
+              </ul>
+              <a href="#" class="btn btn-success">See Project</a>
+            </div>
+          </div>
+        </div>
+        <div class="col p-5">
+          <div class="card">
+            <div class="placeholder bg-dark"></div>
+
+            <div class="card-body">
+              <h3 class="card-title">Multi-Post Stories Gain+Glory</h3>
+              <ul class="d-flex justify-content-center">
+                <li>
+                  <span class="badge bg-dark m-1 p-2">Ruby on rails</span>
+                </li>
+                <li><span class="badge bg-dark m-1 p-2">css</span></li>
+                <li><span class="badge bg-dark m-1 p-2">JavScript</span></li>
+                <li><span class="badge bg-dark m-1 p-2">html</span></li>
+              </ul>
+              <a href="#" class="btn btn-success">See Project</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
       integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
