add flexes to the contact page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul class="nav justify-content-center d-none d-lg-flex">
           <li class="nav-item">
             <a class="nav-link active text-dark" aria-current="page" href="#">
-              Portfolio
+              Haji-Ali's Portfolio
             </a>
           </li>
           <li class="nav-item">
@@ -306,7 +306,7 @@
     </section>
 
     <section>
-      <div class="row p-5">
+      <div class="d-sm-flex p-5">
         <div class="col align-self-center">
           <h2 class="text-center">
             I'm always interested in hearing about new projects, so if you'd
@@ -317,7 +317,7 @@
           <form>
             <div class="mb-3">
               <input
-                type="email"
+                type="text"
                 class="form-control"
                 placeholder="Full name"
                 maxlength="30"
